src/gtk-3.0/gtk-widgets.css
/* ... */
scrollbar.horizontal button.up:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-left.png");
}
scrollbar.horizontal button.down:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-right.png");
}

/**************
 * checkboxes *
 **************/
check, radio {
	margin: 2px 5px 2px 2px;
}
checkbutton:hover, radiobutton:hover {
	background-color: shade(@theme_bg_color, 1.05);
}
checkbutton label, radiobutton label {
	padding-right: 3px;
}
check:disabled, radio:disabled {
	border-color: shade(@theme_bg_color, .6);
}
check {
	-gtk-icon-source: url("assets/checkbox-unchecked.png");
}
check:checked {
	-gtk-icon-source: url("assets/checkbox-checked.png");
}
check:checked:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked-disabled.png"));
}
check:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked-disabled.png"));
}
check:indeterminated {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed.png"));
}
check:indeterminated:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed-disabled.png"));
}

/******************
 * radion buttons *
 ******************/
radio,
.view.cellradio {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked.png"));
	margin: 2px;
}
radio:checked {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-checked.png"));
}
radio:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked-disabled.png"));
}
radio:checked:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-checked-disabled.png"));
}

/****************
 * text entries *
 ****************/
entry {
	background: @theme_base_color;
	border-image: url("assets/entry.png") 2 / 2px stretch;
	padding: 5px;
}

/**************
 * comboboxes *
 **************/
combobox arrow {
	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
	color: @theme_fg_color;
	min-height: 16px;
	min-width: 16px;
}
combobox button:first-child arrow {
	background: url("assets/combobox-arrow-separator.png") no-repeat left center;
	padding-left: 4px;
}


/*********
 * menus *
 *********/
menubar {
	border-image: url("assets/button.png") 2 / 2px stretch;
}
menu {
	border: solid 3px;
	border-image: url("assets/menu.png") 3 / 3px stretch;
	padding: 2px;

}
menubar > menuitem {
	margin: 1px;
}
menubar > menuitem:hover {
	background: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}
menuitem {
	padding: 5px;
}
menuitem:hover {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}
menu separator {
	border-image: url("assets/separator-horizontal.png") 1 / 1px stretch;
	margin: 3px 5px;
	padding: 1px;
}
menuitem > check,
menuitem > radio,
menuitem > arrow {
	min-height: 16px;
	min-width: 16px;
}
menuitem > arrow {
	margin-left: 10px;
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
}

/*************
 * notebooks *
 *************/
notebook.frame > stack {
	border-image: url("assets/notebook.png") 3 / 3px stretch;
	padding: 2px;
}
notebook header.top tabs {
	margin-top: 3px;
}
notebook header.bottom tabs {
	margin-bottom: 3px;
}
notebook header.left tabs {
	margin-left: 3px;
}
notebook header.right tabs {
	margin-right: 3px;
}
notebook tab {
	background: shade(@theme_bg_color, .9);
	padding: 5px;
}
notebook header.top tab {
	border-image: url("assets/notebook-tab-top.png") 2 / 2px stretch;
}
notebook header.bottom tab {
	border-image: url("assets/notebook-tab-bottom.png") 2 / 2px stretch;
}
notebook header.left tab {
	border-image: url("assets/notebook-tab-left.png") 2 / 2px stretch;
}
notebook header.right tab {
	border-image: url("assets/notebook-tab-right.png") 2 / 2px stretch;
}
notebook header tab:checked {
	background: @theme_bg_color;
}
notebook header.top tab:checked {
	margin-bottom: -1px;
	margin-top: -3px;
}
notebook header.bottom tab:checked {
	margin-bottom: -3px;
	margin-top: -2px;
}
notebook header.left tab:checked {
	margin-left: -3px;
	margin-right: -1px;
}
notebook header.right tab:checked {
	margin-left: -2px;
	margin-right: -3px;
}
notebook header.top tab:checked * {
	margin-top: -1px;
}
notebook header.bottom tab:checked * {
	margin-bottom: -3px;
}
notebook header.left tab:checked * {
	margin-left: -2px;
}
notebook header.right tab:checked * {
	margin-right: -3px;
}
notebook tab button {
	background-color: transparent;
	border: 0;
}

/************
 * expander *
 ************/
expander arrow {
	min-width: 16px;
	min-height: 16px;
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
}
expander arrow:checked {
	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
}

/*************************************************************
 * the fucking shitty GTK3 window's headerbar and decoration *
 *************************************************************/
headerbar {
	background-color: @theme_bg_color;
	border-bottom: solid 1px shade(@theme_bg_color, .8);
	padding: 7px;
}
decoration {
	background-color: @theme_bg_color;
	border: solid 3px @theme_bg_color;
	border-image: url("assets/button.png") 3 / 3px stretch;
}

/****************************
 * application notification *
 ****************************/
.app-notification {
	background-color: @theme_info_bg_color;
	border-image: url("assets/frame-etched-out.png") 3 / 3px stretch;
	padding: 7px;
}
.app-notification border {
	border: 0;
}

/************
 * popovers *
 ************/
popover {
	border: solid 1px shade(@theme_bg_color, 0.5);
}
popover .flat {
	padding: 5px;
}

/***********
 * toolbar *
 ***********/
toolbar {
	background: @theme_bg_color;
	border-image: url("assets/button.png") 3 / 3px stretch;
	padding: 3px;
}
toolbar separator {
	border-image: url("assets/separator-vertical.png") 1 / 1px stretch;
	margin: 5px;
	padding: 1px;
}

/*************
 * statusbar *
 *************/
statusbar button {
	padding: 2px;
}
statusbar button:active:hover,
statusbar button.toggle:checked,
statusbar button.toggle:active:hover {
	padding: 3px 1px 1px 3px;
}
/* ... */

